--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install packages
         run: npm install
       - name: Build Project
-        run: npm run build-staging
+        run: npm run build
       - uses: w9jds/firebase-action@master
         with:
              args: deploy --only hosting
